--- a/src/p2-homeworks/h4/common/c2-SuperButton/SuperButton.module.css
+++ b/src/p2-homeworks/h4/common/c2-SuperButton/SuperButton.module.css
@@ -1,7 +1,51 @@
+/* кнопка по умолчанию*/
 .default {
-
+    border-color: #3498db;
+    color: #fff;
+    box-shadow: 0 0 40px 40px #3498db inset, 0 0 0 0 #3498db;
+    -webkit-transition: all 150ms ease-in-out;
+    transition: all 150ms ease-in-out;
 }
 
+.default:disabled {
+    pointer-events: none;
+    opacity: 80%;
+    background-color: darkgrey;
+}
+
+.default:hover {
+    box-shadow: 0 0 10px 0 #3498db inset, 0 0 10px 4px #3498db;
+    color: black;
+}
+
+.default:active {
+    box-shadow: none;
+    transform: translateY(0);
+}
+/*кнопка красная*/
 .red {
-    background: red;
+    appearance: none;
+    background-color: transparent;
+    border: 1px solid crimson;
+    border-radius: 5px;
+    color: crimson;
+    cursor: pointer;
+    font-family: Roobert, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-size: 16px;
+    font-weight: 600;
+    outline: none;
+    text-decoration: none;
+    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    min-width: min-content;
+    max-width: max-content;
+    will-change: transform;
+}
+.red:hover {
+    color: crimson;
+    background-color: rgba(250,209,192,0.5);
+    box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+    transform: translateY(-2px);
 }
