--- a/src/p2-homeworks/h4/common/c3-SuperCheckbox/SuperCheckbox.module.css
+++ b/src/p2-homeworks/h4/common/c3-SuperCheckbox/SuperCheckbox.module.css
@@ -1,7 +1,37 @@
-.checkbox {
-    /*accent-color: #1A1A1A;*/
-    accent-color: darkslategray;
+.label {
+    display: flex;
+    align-items: center;
 
+    cursor: pointer;
+}
+
+/*input[type='checkbox'] - no*/
+
+.checkbox {
+    appearance: none;
+    /*свойство это изменяет внешний вид элемента интерфейса , при сохранении его функции,
+       Если задать значение none, то чекбокс пропадает но по нему тем не меннее можно щелкать и состояние чекбокса будет меняться*/
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+    background: #335533;
+
+    /*background-repeat: no-repeat;*/
+    /*background-position: center center;*/
+    
+    /*background-size: 90% 90%;*/
+    /*vertical-align: middle;*/
+
+}
+
+.checkbox:checked {
+    appearance: none;
+    background-image: url("ch.png");
+    /*background: #99ff99;*/
+}
+
+.checkbox:focus {
+    outline: #99ff99 solid 1px;
 }
 
 .spanClassName {
