--- a/src/p2-homeworks/h1/Message.module.css
+++ b/src/p2-homeworks/h1/Message.module.css
@@ -1,5 +1,7 @@
 .message {
     display: flex;
+    align-items: center;
+    justify-content: center;
     align-items: flex-end;
     margin: 10px;
 }
