--- a/src/p2-homeworks/h4/common/c1-SuperInputText/SuperInputText.module.css
+++ b/src/p2-homeworks/h4/common/c1-SuperInputText/SuperInputText.module.css
@@ -9,7 +9,7 @@
     padding: 5px 10px;
     margin: 3px 0;
     box-sizing: initial;
-    border: 2px solid gray;
+    border: 2px solid #99ff99;
     border-radius: 4px;
 }
 
